--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,6 @@ body {
     color: rgb(42, 40, 40);
 }
 
-header {
-    display: flex;
-    align-self: center;
-}
-
 .container {
     max-width: 1024px;
     width: 100%;
@@ -41,4 +36,46 @@ header {
 
 .navigation-item {
     padding-right: 10px;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+}
+
+.phone {
+    margin-left: 10px;
+}
+
+.hero-title {
+    font-size: 50px;
+    font-weight: 700;
+    margin-top: 80px;
+    margin-bottom: 40px;
+    max-width: 50%;
+}
+
+.hero-text {
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 40px;
+    max-width: 40%;
+    color: #57534e;
+}
+
+.button-large {
+    background-color: #f97316;
+    color: white;
+    font-size: 20px;
+    padding: 15px 30px 15px 30px;
+    border-radius: 10px;
+    border: none;
+}
+
+.button-large:hover {
+    background-color: #ea580c;
+}
+
+.button-large:active {
+    background-color: #bf490a;
 }
