--- a/styles.css
+++ b/styles.css
@@ -63,19 +63,27 @@ body {
     color: #57534e;
 }
 
-.button-large {
-    background-color: #f97316;
+.button {
     color: white;
-    font-size: 20px;
     padding: 15px 30px 15px 30px;
     border-radius: 10px;
     border: none;
 }
 
-.button-large:hover {
+.button-large {
+    background-color: #f97316;
+    font-size: 20px;
+}
+
+.button-small {
+    background-color: #fed7aa;
+    font-size: 10px;
+}
+
+.button:hover {
     background-color: #ea580c;
 }
 
-.button-large:active {
+.button:active {
     background-color: #bf490a;
 }
